<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/fragment_compare"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".CompareFragment">


	<Spinner
		android:id="@+id/spinner1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="72dp"
		app:layout_constraintBottom_toTopOf="@+id/spinnerStat"
		app:layout_constraintStart_toStartOf="@+id/spinnerStat" />

	<Spinner
		android:id="@+id/spinner2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="112dp"
		app:layout_constraintStart_toStartOf="@+id/spinner1"
		app:layout_constraintTop_toTopOf="parent" />

	<Spinner
		android:id="@+id/spinnerStat"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="311dp"
		android:layout_marginEnd="124dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="34dp"
		android:layout_marginEnd="35dp"
		android:text="Compare"
		app:layout_constraintEnd_toEndOf="@+id/spinnerStat"
		app:layout_constraintTop_toBottomOf="@+id/spinnerStat" />

	<TextView
		android:id="@+id/statView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="56dp"
		android:text=""
		app:layout_constraintBottom_toTopOf="@+id/statView2"
		app:layout_constraintStart_toStartOf="@+id/statView2" />

	<TextView
		android:id="@+id/statView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="171dp"
		android:text=""
		app:layout_constraintBottom_toBottomOf="@+id/planetText2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/planetText2" />

	<TextView
		android:id="@+id/planetText1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="76dp"
		android:layout_marginBottom="226dp"
		android:text=""
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/planetText2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="1dp"
		android:layout_marginTop="55dp"
		android:text=""
		app:layout_constraintStart_toStartOf="@+id/planetText1"
		app:layout_constraintTop_toBottomOf="@+id/planetText1" />

</androidx.constraintlayout.widget.ConstraintLayout>