<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

		<item
			android:id="@+id/main_frag"
			android:title="@string/main"/>

		<item
			android:id="@+id/comp_frag"
			android:title="@string/compare"/>

		<item
			android:id="@+id/news_frag"
			android:title="@string/news"/>

		<item
			android:id="@+id/fav_frag"
			android:title="Favorites"/>

</menu>